# material2

./: package.json  packages.bzl  rollup-globals.bzl
.github/: CODEOWNERS
.ng-dev/: commit-message.ts
guides/: getting-started.md
scripts/: approve-api-golden.js  check-mdc-tests-config.ts
src/cdk-experimental/: config.bzl
src/cdk-experimental/dialog/: dialog-container.ts
src/cdk-experimental/table/: BUILD.bazel  table-virtual-scroll.ts
src/cdk/collections/: recycle-view-repeater-strategy.ts
src/cdk/drag-drop/: drag-drop-module.ts  drag-drop-registry.spec.ts  drag-drop-registry.ts  drag-ref.ts  drag.spec.ts  drag.ts  drop-list-ref.ts
src/cdk/observers/: observe-content.ts
src/cdk/overlay/: _overlay.scss  overlay-directives.spec.ts  overlay-directives.ts  overlay-ref.ts  overlay.spec.ts  overlay.ts
src/cdk/portal/: dom-portal-outlet.ts
src/cdk/schematics/: BUILD.bazel
src/cdk/scrolling/: virtual-for-of.ts  virtual-scroll-viewport.spec.ts  virtual-scroll-viewport.ts
src/cdk/table/: table-module.ts  table.scss  table.spec.ts  table.ts
src/cdk/testing/: public-api.ts  test-element.ts
src/cdk/text-field/: autosize.spec.ts
src/cdk/tree/: tree.spec.ts  (+1 more)
src/components-examples/: BUILD.bazel
src/components-examples/cdk-experimental/table/: BUILD.bazel
src/dev-app/: BUILD.bazel  main.ts
src/e2e-app/: devserver-configure.js
src/material-experimental/: config.bzl  mdc_require_config.js
src/youtube-player/: youtube-player.ts
tools/: defaults.bzl  system-config-tmpl.js
tools/gulp/: packages.ts
tools/public_api_guard/: BUILD.bazel
(+207 files in other folders)
