load(
    "//tools:defaults.bzl",
    "ng_module",
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "table",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@angular/cdk-experimental/table",
    deps = [
        "//src/cdk/bidi",
        "//src/cdk/platform",
        "//src/cdk/table",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//rxjs",
    ],
)
